# ltps-capi

./: CMakeLists.txt  Doxyfile  api.pro  mainpage.dox  mainpage.dox~
doxy/: NOTE.txt  footer.html
examples/: a.out  gpio.cpp  i2c.cpp  spi.cpp  tibbit13.cpp  tibbit14.cpp  tibbit16.cpp  tibbit17.cpp  tibbit28.cpp  tibbit29.cpp  tibbit30.cpp  tibbit31.cpp  tibbit35.cpp  tibbit36.cpp  tibbit40.cpp  tibbit41.cpp  tibbit42.cpp  tibbit52.cpp  tibbit53.cpp  tty485.cpp  twg.cpp
include/: global.h  ltps.h  lutils.h  utilities.h
include/drivers/: CWg.h  Ci2c.h  Ci2c_smbus.h  Cspi.h  ci2c.h  ci2c_smbus.h  cpin.h  gpio.h
include/tibbits/i2c/: accelerometer.h  adc-16bits.h  adc-4-20.h  adc.h  dac.h  humidity.h  light.h  pic.h  portextender.h  potentiometer.h  pressure.h  temperature.h
include/tibbits/spi/: rtc.h
src/: lutils.cpp  main.cpp  utilities.cpp
src/drivers/: CWg.cpp  Ci2c.cpp  Ci2c_smbus.cpp  Cspi.cpp  ci2c.cpp  ci2c_smbus.cpp  cpin.cpp  gpio.cpp
src/tibbits/i2c/: accelerometer.cpp  adc-16bits.cpp  adc-4-20.cpp  adc.cpp  dac.cpp  humidity.cpp  light.cpp  pic.cpp  portextender.cpp  potentiometer.cpp  pressure.cpp  temperature.cpp
src/tibbits/spi/: rtc.cpp
